# AWS_youtube_Transcribe_API

./: .gitignore  README.md  app.py  cdk.context.json  deploy.sh  pyproject.toml  sample_test_request.sh  test_request.sh
chat_with_youtube_gpt/: chat_with_youtube_gpt_stack.py
lambda/: Dockerfile  app.py  pyproject.toml  sample_event.json  test_app.py  validations.py
tests/unit/: test_chat_with_youtube_gpt_stack.py
